--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,26 @@
 <resources>
     <string name="app_name">Egyptian Rat Screw</string>
     <string name="preference_file_key">com.example.android.egyptianratscrew.PREFERENCES</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="options_menu">Options</string>
+    <string name="slap">Slap</string>
+    <string name="play">Play</string>
+    <string name="new_game">New Game</string>
+    <string name="continue_game">Continue</string>
+    <string name="about_game">About</string>
+    <string name="new_game_preference">newGame</string>
+    <string name="reset">Reset</string>
+    <string name="save">Game Saved</string>
+    <string name="menu_home">Home</string>
+    <string name="menu_reset">Reset</string>
+    <string name="menu_save">Save</string>
+    <string name="p1_slaps">P1 SLAPS</string>
+    <string name="p1_burn">P1 BURN</string>
+    <string name="p2_slaps">P2 SLAPS</string>
+    <string name="p2_burn">P2 BURN</string>
+    <string name="p1_wins_message">Player One Wins!</string>
+    <string name="p2_wins_message">Player Two Wins!</string>
+    <string name="p1_save_preference">p1Deck</string>
+    <string name="p2_save_preference">p2Deck</string>
+    <string name="mid_save_preference">midDeck</string>
 </resources>
+
