--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,9 +13,9 @@
     <string name="menu_home">Home</string>
     <string name="menu_reset">Reset</string>
     <string name="menu_save">Save</string>
-    <string name="p1_slaps">P1 SLAPS!</string>
+    <string name="p1_slaps">P1 SLAP!</string>
     <string name="p1_burn">P1 BURN!</string>
-    <string name="p2_slaps">P2 SLAPS!</string>
+    <string name="p2_slaps">P2 SLAP!</string>
     <string name="p2_burn">P2 BURN!</string>
     <string name="p1_wins_message">Player One Wins!</string>
     <string name="p2_wins_message">Player Two Wins!</string>
