--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,6 @@
     <string name="new_game">New Game</string>
     <string name="continue_game">Continue</string>
     <string name="about_game">About</string>
-    <string name="new_game_preference">newGame</string>
     <string name="reset">Reset!</string>
     <string name="save">Saved!</string>
     <string name="menu_home">Home</string>
@@ -17,10 +16,18 @@
     <string name="p1_burn">P1 BURN!</string>
     <string name="p2_slaps">P2 SLAP!</string>
     <string name="p2_burn">P2 BURN!</string>
-    <string name="p1_wins_message">Player One Wins!</string>
-    <string name="p2_wins_message">Player Two Wins!</string>
+    <string name="p1_wins_message">PLAYER\nONE\nWINS!</string>
+    <string name="p2_wins_message">PLAYER\nTWO\nWINS!</string>
+
+    <!-- preferences -->
+    <string name="new_game_preference">newGame</string>
     <string name="p1_save_preference">p1Deck</string>
     <string name="p2_save_preference">p2Deck</string>
     <string name="mid_save_preference">midDeck</string>
+    <string name="p1_num_plays_preference">p1Plays</string>
+    <string name="p2_num_plays_preference">p2Plays</string>
+    <string name="p1_face_card_preference">p1Fc</string>
+    <string name="p2_face_card_preference">p2Fc</string>
+    <string name="mid_card_img_id_preference">resID</string>
 </resources>
 
